# LeRobot-mlx

./: .gitignore  CLAUDE.md  GETTING_STARTED.md  PROMPT.md  README.md  UPSTREAM_VERSION.md  pyproject.toml
.claude/: CLAUDE.md
benchmarks/: RESULTS.md  bench_inference.py  bench_memory.py  bench_training.py  results.json  run_all.py
examples/: 01_quickstart.py  02_train_act_synthetic.py  03_train_diffusion_synthetic.py  04_policy_factory.py  05_compare_policies.py  06_compat_layer_demo.py
prds/: PRD-00-upstream-sync-architecture.md  PRD-01-dev-environment.md  PRD-02-compat-core.md  PRD-03-compat-functional-optim.md  PRD-04-compat-vision-einops.md  PRD-05-act-policy.md  PRD-06-diffusion-policy.md  PRD-07-training-loop.md  PRD-08-datasets-processor.md  PRD-09-tdmpc-policy.md  PRD-10-vqbet-policy.md  PRD-11-sac-policy.md  PRD-12-weight-conversion.md  PRD-13-policy-factory-registry.md  PRD-14-cli-scripts.md  PRD-15-sarm-policy.md  PRD-16-pi0-vla-policy.md  PRD-17-smolvla-policy.md  PRD-18-benchmarks-documentation.md  PRD-19-vlm-backbone-integration.md  PRD-20-benchmarks-perf.md  PRD-21-cli-ux-polish.md  PRD-22-pi0-variants.md  README.md
tests/: __init__.py  conftest.py  helpers.py  test_act.py  test_benchmarks.py  test_cli.py  test_compat_core.py  test_compat_functional.py  test_compat_vision.py  test_datasets.py  test_diffusion.py  test_examples.py  test_factory.py  test_pi0.py  test_pi05.py  test_pi0_fast.py  test_pretrained.py  test_sac.py  test_sarm.py  test_smoke.py  test_smolvla.py  test_tdmpc.py  test_training.py  test_vlm_backbone.py  test_vqbet.py
(+62 files in other folders)
